# GameEngine

./: .gitignore  CMakeLists.txt
Editor/: CMakeLists.txt
Game/: CMakeLists.txt
Game/src/: game.cpp  main.cpp
Game/src/Components/: BoxMovement.cpp  BoxMovement.h  CameraMovement.cpp  CameraMovement.h
Game/src/Materials/: defaultMaterial.h
Game/src/Scenes/: mainscene.cpp  mainscene.h
GameEngineCore/: CMakeLists.txt
GameEngineCore/src/: Application.cpp  Application.h  GameEngine.h  Input.cpp  Input.h  Window.cpp  Window.h
GameEngineCore/src/Collisions/: Collisions.cpp  Collisions.h  GJKEPA.cpp  GJKEPA.h
GameEngineCore/src/Core/: Application.cpp  Application.h  EntryPoint.cpp  Input.cpp  UUID.h  VulkanConfig.h  Window.cpp  Window.h
GameEngineCore/src/Core/Collisions/: Collisions.cpp  Collisions.h  GJKEPA.cpp  GJKEPA.h
GameEngineCore/src/Core/Log/: Log.cpp  Log.h  Logger.cpp  Logger.h
GameEngineCore/src/Core/Renderer/: DefaultRenderer.cpp  DefaultRenderer.h  Lights.h  Renderer.cpp  Renderer.h  VulkanApi.cpp  VulkanApi.h
GameEngineCore/src/Core/Ressources/: Buffer.cpp  Buffer.h  DescriptorsManager.cpp  DescriptorsManager.h  IndexBuffer.cpp  IndexBuffer.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Pipeline.cpp  Pipeline.h  RessourceManager.cpp  RessourceManager.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexBuffer.cpp  vertexBuffer.h
GameEngineCore/src/Core/Scene/: Scene.cpp  Scene.h
GameEngineCore/src/Core/Scene/Components/: Camera.cpp  Camera.h  Component.h  DirectionalLight.cpp  DirectionalLight.h  MeshRenderer.cpp  MeshRenderer.h  PointLight.cpp  PointLight.h  Renderer.cpp  Renderer.h
GameEngineCore/src/Core/Scene/Components/Physics/: Colliders.cpp  Colliders.h  RigidBody.cpp  RigidBody.h
GameEngineCore/src/Core/Scene/Entities/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  Prefab.h
GameEngineCore/src/Core/Shaders/: blinnPhongFragText.glsl  blinnPhongVertText.glsl
GameEngineCore/src/Core/Utils/: StaticArray.h
GameEngineCore/src/Renderer/: DefaultRenderer.cpp  DefaultRenderer.h  Renderer.cpp  Renderer.h  VulkanApi.cpp  VulkanApi.h
GameEngineCore/src/Ressources/: Buffer.cpp  Buffer.h  DescriptorsManager.cpp  DescriptorsManager.h  ImageBuffer.cpp  ImageBuffer.h  IndexBuffer.cpp  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Pipeline.cpp  Pipeline.h  RessourceManager.cpp  RessourceManager.h  Texture.cpp  Texture.h  UniformBuffer.cpp  Vertex.h  VertexBuffer.cpp
GameEngineCore/src/Scene/: Scene.cpp  Scene.h
GameEngineCore/src/Scene/Components/: Camera.cpp  Camera.h  Component.cpp  Component.h  DirectionalLight.cpp  DirectionalLight.h  MeshRenderer.cpp  MeshRenderer.h  PointLight.cpp  PointLight.h  Renderer.cpp  Renderer.h  Transform.cpp  Transform.h
GameEngineCore/src/Scene/Components/Physics/: Colliders.cpp  Colliders.h  RigidBody.cpp  RigidBody.h
GameEngineCore/src/Scene/Entities/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  Prefab.h
GameEngineCore/src/Shaders/: blinnPhongFragColor.glsl  blinnPhongFragText.glsl  blinnPhongVertColor.glsl  blinnPhongVertText.glsl  vertexShader.glsl
cmake/: CompileShaders.cmake
scripts/: Run.bat  Run.sh  build.bat  build.sh  generate_cmake.bat  generate_cmake.sh
